--- a/src/widgets/header/styles.module.scss
+++ b/src/widgets/header/styles.module.scss
@@ -18,8 +18,8 @@
   cursor: pointer;
   border-radius: 50%;
   user-select: none;
-  width: 50px;
-  height: 50px;
+  width: 50px !important;
+  height: 50px !important;
   background: #faa61a;
   display: flex;
   justify-content: center;
@@ -31,8 +31,8 @@
   font-weight: 700;
   line-height: normal;
   @media screen and (max-width: 650px) {
-    width: 32px;
-    height: 32px;
+    width: 32px !important;
+    height: 32px !important;
   }
 }
 
