--- a/src/shared/ui/PlinkoPiramyd/ui/ui.module.scss
+++ b/src/shared/ui/PlinkoPiramyd/ui/ui.module.scss
@@ -51,7 +51,19 @@
         }
       }
       .dot_shadow {
-        filter: drop-shadow(0px 0px 6px #fff) drop-shadow(0px 0px 6px #fff);
+        // filter: drop-shadow(0px 0px 6px #fff) drop-shadow(0px 0px 6px #fff);
+        animation: dots 1.5s;
+        @keyframes dots {
+          0% {
+            filter: drop-shadow(0px 0px 0px #fff) drop-shadow(0px 0px 0px #fff);
+          }
+          50% {
+            filter: drop-shadow(0px 0px 6px #fff) drop-shadow(0px 0px 6px #fff);
+          }
+          100% {
+            filter: drop-shadow(0px 0px 0px #fff) drop-shadow(0px 0px 0px #fff);
+          }
+        }
       }
     }
 
