--- a/src/shared/ui/PlinkoPiramyd/ui/ui.module.scss
+++ b/src/shared/ui/PlinkoPiramyd/ui/ui.module.scss
@@ -53,7 +53,18 @@
         }
       }
       .dot_shadow {
-        filter: drop-shadow(0px 0px 6px #fff) drop-shadow(0px 0px 6px #fff);
+        animation: an 1.5s;
+        @keyframes an {
+          0% {
+            filter: drop-shadow(0px 0px 0px #fff) drop-shadow(0px 0px 0px #fff);
+          }
+          50% {
+            filter: drop-shadow(0px 0px 6px #fff) drop-shadow(0px 0px 6px #fff);
+          }
+          100% {
+            filter: drop-shadow(0px 0px 0px #fff) drop-shadow(0px 0px 0px #fff);
+          }
+        }
       }
     }
 
